<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Democracycle</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="SamplingPeriod">30</string>
    <string name="DefaultSampPeriodMin">15</string>
    <string name="title_activity_manual_capture">Manual Capture</string>
    <string name="Flag_isRunning">FLAG_ISRUNNING</string>
    <string name="Question0Prompt">Image Tag?</string>
    <string name="Question1Prompt">How physically challenging was this route?</string>
    <string name="Question2Prompt">Considering road conditions due to weather and maintenance, the amount of traffic and space, how safe was this route?</string>
    <string name="Question3Prompt">How aesthetically beautiful was the route?</string>
    <string name="Question4Prompt">What type of place is this?</string>
    <string name="Question5Prompt">Would you choose live here?</string>
    <string name="Question6Prompt">Would you choose to socialize here?</string>
    <string name="Question7Prompt">Scary or Safe?</string>
    <string name="Question8Prompt">Fun or Boring?</string>
    <string name="Question9Prompt">Cheery or Depressive?</string>

    <string-array name="Question1">
        <item>...</item>
        <item>5(most)</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1(least)</item>
    </string-array>
    <string-array name="Question2">
        <item>...</item>
        <item>5(most)</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1(least)</item>
    </string-array>
    <string-array name="Question3">
        <item>...</item>
        <item>5(most)</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1(least)</item>
    </string-array>
    <string-array name="Question4">
        <item>What type of place is this?</item>
        <item>Home</item>
        <item>Work</item>
        <item>Study</item>
        <item>Restaurant</item>
        <item>Shop</item>
        <item>Movie</item>
        <item>Outdoor</item>
    </string-array>
    <string-array name="Question5">
        <item>Would you choose live here?</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="Question6">
        <item>Would you choose to socialize here?</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="Question7">
        <item>Scary or Safe?</item>
        <item>Scary</item>
        <item>Safe</item>
        <item>neither</item>
    </string-array>
    <string-array name="Question8">
        <item>Fun or Boring?</item>
        <item>Fun</item>
        <item>Boring</item>
        <item>neither</item>
    </string-array>
    <string-array name="Question9">
        <item>Cheery or Depressive?</item>
        <item>Cheery</item>
        <item>Depressive</item>
        <item>neither</item>
    </string-array>

    <string name="ticker_text">Hi from PAC Group!</string>
    <string name="notification_title">AnthropoSophia</string>
    <string name="notification_message">The Mobile Sensor Data Collection is running.</string>
    <string name="title_activity_show_results">Reward Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_manual_capture2">Manual Capture</string>
    <string name="title_activity_pam">Manual Capture</string>
    <string name="title_activity_questionnaire">Howdy?</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_calendar_view">CalendarViewActivity</string>

</resources>