<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/question5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:entries="@array/Question5"
            android:prompt="@string/Question5Prompt" />

        <Spinner
            android:id="@+id/question6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:entries="@array/Question6"
            android:prompt="@string/Question6Prompt" />
        

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.35"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/emotionQuestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.16"
            android:background="@android:color/black"
            android:text="Do you associate any of the following emotions with the place?"
            android:textColor="@android:color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/PAM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.16"
            android:onClick="onClickPAM"
            android:text="Emotion of the place" />

        <Spinner
            android:id="@+id/question7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:entries="@array/Question7"
            android:prompt="@string/Question7Prompt" />

        <Spinner
            android:id="@+id/question8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:entries="@array/Question8"
            android:prompt="@string/Question8Prompt" />

        <Spinner
            android:id="@+id/question9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:entries="@array/Question9"
            android:prompt="@string/Question9Prompt" />

    </LinearLayout>
    
    <Button
        android:id="@+id/done"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.05"
        android:onClick="onClickDone"
        android:text="Done" />

</LinearLayout>